SAR Blai Sandbox/src/objects/Tarifa__c.object
<CustomObject>
    <fields>
        <fullName>Ano_analisis__c</fullName>
        <label>Año análisis</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Central</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Centro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tarifas TA</relationshipLabel>
        <relationshipName>Tarifas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tarifas</relationshipLabel>
        <relationshipName>Tarifas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QC89AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tarifas del Competidor</relationshipLabel>
        <relationshipName>Tarifas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descuento_del__c</fullName>
        <label>Descuento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fecha_Captaci_n__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Fecha Captación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBclAAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Tarifas</relationshipLabel>
        <relationshipName>Tarifas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nombre_Centro__c</fullName>
        <label>Nombre Centro</label>
        <picklist>
            <picklistValues>
                <fullName>ALBUFERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCUDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASORIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZALEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONANOVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADIZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN BUXERES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPDEPERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBADAJOZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCARBONELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIUDAD DE LAS ARTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLARET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMOSTOLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONCEPCION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORNELLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSTA DEN BLANES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL SERRALLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FONTIBRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUENTESOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDABE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNADAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAFLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA SALUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRAFLORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTEALTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTEARSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTEJARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTEVAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Precio_Plus__c</fullName>
        <label>Precio Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <label>Precio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_beneficiario_sin_ucr__c</fullName>
        <label>Precio beneficiario sin ucr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_cuota_inicial__c</fullName>
        <label>Precio cuota inicial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_dispositivo__c</fullName>
        <label>Precio dispositivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_servicio__c</fullName>
        <label>Precio servicio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_ucr_adicional__c</fullName>
        <label>Precio ucr adicional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicio_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Servicio__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Servicios_TA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Tarifas (Servicio)</relationshipLabel>
        <relationshipName>Tarifas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Servicio__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QIES</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Tarifas</relationshipLabel>
        <relationshipName>Tarifas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tarifa_Vigente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarifa Vigente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_Contrato__c</fullName>
        <label>Tipo Contrato</label>
        <picklist>
            <picklistValues>
                <fullName>Público</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Tarifa__c</fullName>
        <label>Tipo Tarifa</label>
        <picklist>
            <picklistValues>
                <fullName>Diaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mensual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Febrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octubre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio__c</fullName>
        <formula>text(Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de servicio</label>
        <type>Text</type>
    </fields>
    <label>Tarifa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Tipo_Tarifa__c</columns>
        <columns>Tipo_Contrato__c</columns>
        <columns>Precio__c</columns>
        <columns>Precio_Plus__c</columns>
        <columns>NOC__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Todos_2015</fullName>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Tipo_Tarifa__c</columns>
        <columns>Tipo_Contrato__c</columns>
        <columns>Precio__c</columns>
        <columns>Precio_Plus__c</columns>
        <columns>NOC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NOC__c</field>
            <operation>contains</operation>
            <value>2015</value>
        </filters>
        <label>Todos 2015</label>
    </listViews>
    <nameField>
        <label>Nombre de Tarifa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarifas</pluralLabel>
    <recordTypes>
        <fullName>Tarifas_Centro</fullName>
        <active>true</active>
        <description>Tarifas de los Centros Sarquavitae</description>
        <label>Tarifas Centro</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tarifas_Competidores</fullName>
        <active>true</active>
        <description>Tarifas de los centros competidores de Sarquavitae</description>
        <label>Tarifas Competidores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tarifas_TAD</fullName>
        <active>true</active>
        <label>Tarifas TAD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tarifas_TAM</fullName>
        <active>true</active>
        <label>Tarifas TAM</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>